[package]
name = "ipfs_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
bytes = "1.2.1"
futures = "0.3.23"
http = "0.2"
rand = "0.8"
reqwest = { version = "0.11.11", default-features = false, features = ["multipart"] }
url = "2.2.2"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["full"] }
