[package]
name = "ipfs_cluster"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.11.11", default-features = false, features = ["multipart"] }
serde = "1"
url = "2.2.2"

[dev-dependencies]
tokio = "1"
