[package]
name = "node"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
identity_iota_core = "0.6.1"
identity_core = "0.6.1"
identity_did = "0.6.1"
identity_iota_client = "0.6.1"
iota-crypto = { version = "0.13.0", features = [
  "blake2b",
  "sha",
], default-features = false }
merkle_tree = { path = "../merkle_tree" }
ipfs-api-backend-hyper = { version = "0.5", features = ["with-hyper-rustls"] }
serde = "1.0"
packable = "0.5.0"
futures = "0.3"
rand = "0.8.5"
tokio = "1"
http = "0.2"
ipfs-cluster = { path = "../ipfs-cluster" }

[dependencies.iota-client]
git = "https://github.com/iotaledger/iota.rs"
rev = "a582bfa882793fe21db2055c4f7878ebc531877a" # develop branch, 2022-07-27
features = ["tls"]
default-features = false
optional = true
