[package]
name = "node"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
identity_iota_core = "0.6.1"
identity_core = "0.6.1"
identity_did = "0.6.1"
identity_iota_client = "0.6.1"
iota-crypto = { version = "0.13.0", features = [
  "blake2b",
  "sha",
], default-features = false }
merkle_tree = { path = "../merkle_tree" }
ipfs-api-backend-hyper = { version = "0.5", features = ["with-hyper-rustls"] }
serde = "1.0"
packable = "0.5.0"
futures = "0.3"
rand = "0.8.5"
tokio = { version = "1", features = ["fs"] }
http = "0.2"
ipfs_cluster = { path = "../ipfs_cluster" }
log = "0.4"
pretty_env_logger = "0.4"

[dependencies.iota-client]
git = "https://github.com/iotaledger/iota.rs"
rev = "3cfeabd82f60c47305159af114b404291041af7d" # develop branch, 2022-08-10
features = ["tls"]
default-features = false
